[gd_scene load_steps=3 format=3 uid="uid://c7vhyrsaxcfld"]

[ext_resource type="Script" uid="uid://83jh625ru4ct" path="res://Scripts/pause.gd" id="1_jd7g0"]
[ext_resource type="AudioStream" uid="uid://dbhk00cpj1xnt" path="res://Sonidos y BSO/button-8-88355.mp3" id="2_vwj5l"]

[node name="Pause" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jd7g0")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 285.0
offset_right = 790.0
offset_bottom = 396.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Continue" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CONTINUAR"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SALIR"

[node name="Sound_button" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_vwj5l")
volume_db = -30.227

[connection signal="pressed" from="PanelContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
